# vicuna

./: Cargo.toml  GEMINI.md  Justfile  LICENSE  MAJOR.md  README.md  justfile
.github/workflows/: ci.yml
src/: app.rs  assets.rs  backend.rs  config.rs  logging.rs  main.rs
src/api/: client.rs  error.rs  mod.rs  modelfile.rs  types.rs
src/db/: mod.rs  repo.rs  schema.rs
src/tui/: events.rs  mod.rs  styles.rs
src/tui/components/: confirm.rs  markdown.rs  mod.rs  model_picker.rs  popup.rs  toast.rs
src/tui/tabs/: chat.rs  mod.rs  models.rs
src/utils/: vram.rs
