[package]
name = "vicuna"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-stream = "0.3.6"
chrono = "0.4.42"
crossterm = { version = "0.28.1", features = ["event-stream"] }
directories = "6.0.0"
futures = "0.3.31"
libsql = "0.9.29"
ratatui = "0.29.0"
rust-embed = "8.6.0"
reqwest = { version = "0.12.28", features = ["stream", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tokio-util = { version = "0.7.13", features = ["codec", "io"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tui-markdown = "0.3.6"
tui-textarea = "0.7.0"
ratatui-image = "1.0.1"
image = "0.25.5"
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }
thiserror = "2.0.17"
