[package]
name = "vicuna"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
async-stream = "0.3.6"
chrono = "0.4.45"
crossterm = { version = "0.28.1", features = ["event-stream"] }
directories = "6.0.0"
futures = "0.3.32"
image = "0.25.10"
libsql = "0.9.30"
ratatui = "0.29.0"
ratatui-image = "1.0.1"
reqwest = { version = "0.12.28", features = ["stream", "json"] }
rust-embed = "8.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.53.0", features = ["rt-multi-thread", "macros"] }
tokio-util = { version = "0.7.18", features = ["codec", "io"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tui-markdown = "0.3.6"
tui-textarea = "0.7.0"
uuid = { version = "1.24.0", features = ["v4", "fast-rng"] }

[profile.release]
strip = true
opt-level = 3
panic = "abort"
